2005-07-29  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/nsmain.c:
	* nsd/tclinit.c: Allocate interps efficiently, max 1 per-thread
	per-server. (RFE #1241351)

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/server.c:
	* nsd/tclinit.c:
	* nsd/tclmisc.c: Add Ns_TclLogErrorInfo and allow admin to
	configure which conenction headers to log for Tcl
	errors. (RFE #1241432)

2005-07-22  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/modload.c: Untabify and reformat.  Add CONST declarations.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/config.c: Untabify and reformat.  Add CONST declarations.

2005-07-21  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_adp_chunked.test:
	* tests/http_chunked.test: Rename tests which handle both Tcl and
	ADP.  Add some more tests which highlight a few bugs.

	* tests/testserver/pages/ns_adp_chunked.tcl:
	* tests/testserver/pages/http_chunked.adp: Rename file.  Handle
	streaming and non-streaming situations, and actually write out the
	data in two goes.  Add a workaround for a bug in the ns_conn
	chunked switch: detect whether client is HTTP/1.1 and therefore
	handles chunked encoding.  This needs to disappear altogether.

	* tests/testserver/pages/ns_tcl_chunked.tcl: Incorporate code
	directly into test file using ns_register_proc.

2005-07-19  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile: Add gdbruntest target to run a naviserver command
	shell under gdb.

2005-07-11  Vlad Seryakov  <seryakov@users.sf.net>

	* NEWS: Updated latest features and changes

	* nsd/driver.c:
	* nsd/nsd.h: Added support for spooling large uploaded
	content into temporary file. Configuration oprion maxsize 
	controls when to use temp file or memory buffer.

	* include/ns.h:	 Added definition of Ns_ConnSend.

2005-07-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/proc.c:
	* nsd/server.c:
	* nsd/adprequest.c:
	* nsd/tclrequest.c: Fix the confusion around the default adp