@@ -105,7 +105,6 @@ extern Tcl_ObjCmdProc
     NsTclLogCtlObjCmd,
     NsTclLogObjCmd,
     NsTclLogRollObjCmd,
-    NsTclMarkForDeleteObjCmd,
     NsTclMkdirObjCmd,
     NsTclModulePathObjCmd,
     NsTclMutexObjCmd,
@@ -288,7 +287,6 @@ static Cmd basicCmds[] = {
     {"ns_log", NULL, NsTclLogObjCmd},
     {"ns_logctl", NULL, NsTclLogCtlObjCmd},
     {"ns_logroll", NULL, NsTclLogRollObjCmd},
-    {"ns_markfordelete", NULL, NsTclMarkForDeleteObjCmd},
     {"ns_mkdir", NULL, NsTclMkdirObjCmd},
     {"ns_mktemp", NsTclMkTempCmd, NULL},
     {"ns_modulepath", NULL, NsTclModulePathObjCmd},
